<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.signIn.SignInActivity">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/mark_pro_bold"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_regular"
                android:text="@string/sign_in"
                android:textSize="17sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/scanIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toTopOf="@id/textView"
                app:layout_constraintBottom_toTopOf="@id/scanTxtView"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_scan_icon"
                android:layout_marginEnd="30dp"/>

            <TextView
                android:id="@+id/scanTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:fontFamily="@font/mark_pro_regular"
                app:layout_constraintTop_toBottomOf="@id/scanIcon"
                app:layout_constraintStart_toStartOf="@id/scanIcon"
                app:layout_constraintEnd_toEndOf="@id/scanIcon"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/mark_pro_regular"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingTop="18dp"
                android:paddingEnd="15dp"
                android:paddingBottom="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/mark_pro_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingTop="18dp"
                android:paddingEnd="15dp"
                android:paddingBottom="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <EditText
                android:id="@+id/edtScannedCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/mark_pro_regular"
                android:hint="@string/scanned_code"
                android:paddingStart="15dp"
                android:paddingTop="18dp"
                android:paddingEnd="15dp"
                android:paddingBottom="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/mark_pro_regular"
                android:padding="15dp"
                android:textColor="@color/white"
                android:text="@string/forgot_password"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtScannedCode" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/mark_pro_bold"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPass" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:fontFamily="@font/mark_pro_regular"
                android:text="@string/don_t_have_an_account_yet"
                app:layout_constraintEnd_toStartOf="@+id/tvRegister"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/mark_pro_bold"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>